<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="app_name">Nexus 4 Modem Flasher</string>
    <string name="action_settings">Settings</string>
    <string name="action_twrp">Install TWRP</string>
    <string name="action_help">Need help?</string>
    <string name="action_about">About</string>
    <string name="action_phone">*#*#INFO#*#*</string>
    <string name="title_activity_stock">StockActivity</string>
    <string name="s03">1.03 Stock Modem</string>
    <string name="s02">1.02 Stock Modem</string>
    <string name="s98">0.98 Stock Modem</string>
    <string name="s97">0.97 Stock Modem</string>
    <string name="s84">0.84 Stock Modem</string>
    <string name="s83">0.83 Stock Modem</string>
    <string name="s54">0.54 Stock Modem</string>
    <string name="s48">0.48 Stock Modem</string>
    <string name="s33">0.33 Stock Modem</string>
    <string name="s27">0.27 Stock Modem</string>
    <string name="s24">0.24 Stock Modem</string>
    <string name="h33_03">1.03 + 0.33 LTE Hybrid Modem</string>
    <string name="h27_03">1.03 + 0.27 LTE Hybrid Modem</string>
    <string name="h33_02">1.02 + 0.33 LTE Hybrid Modem</string>
    <string name="h27_02">1.02 + 0.27 LTE Hybrid Modem</string>
    <string name="h33_98">0.98 + 0.33 LTE Hybrid Modem</string>
    <string name="h27_98">0.98 + 0.27 LTE Hybrid Modem</string>
    <string name="h33_97">0.97 + 0.33 LTE Hybrid Modem</string>
    <string name="h27_97">0.97 + 0.27 LTE Hybrid Modem</string>
    <string name="h33_84">0.84 + 0.33 LTE Hybrid Modem</string>
    <string name="h33_54">0.54 + 0.33 LTE Hybrid Modem</string>
    <string name="h27_54">0.54 + 0.27 LTE Hybrid Modem</string>
    <string name="sFlash_Button">Flash</string>
    <string name="hFlash_Button">Flash</string>
    <string name="LTEButton">Apply</string>
    <string name="Keep">&#160;&#160;Delete modem file after flash?</string>
    <string name="selectModem">Select the modem you want below:</string>
    <string name="options_apply">Select options to apply:</string>
    <string name="EnableLTE">Enable LTE</string>
    <string name="RebootNow">Reboot now</string>
    <string name="DisableLTE">Disable LTE</string>
    <string name="warning">LTE Hybrid Modem needed</string>
</resources>
