<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_apply"
        android:id="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#d4d4d4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnableLTE"
        android:id="@+id/checkBoxLTE"
        android:checked="false"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RebootNow"
        android:id="@+id/checkBoxReboot"
        android:checked="false"
        android:layout_below="@+id/checkBoxNOLTE" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DisableLTE"
        android:id="@+id/checkBoxNOLTE"
        android:checked="false"
        android:layout_below="@+id/checkBoxLTE"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LTEButton"
        android:id="@+id/EnableLTE"
        android:layout_below="@+id/checkBoxReboot"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/warning"
        android:id="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_centerInParent="true" />

</RelativeLayout>